--- a/src/Hilke.KineticConvolution/Hilke.KineticConvolution.csproj
+++ b/src/Hilke.KineticConvolution/Hilke.KineticConvolution.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 
-    <LangVersion>8</LangVersion>
+    <LangVersion>9</LangVersion>
     <Nullable>Enable</Nullable>
 
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Fractions" Version="5.0.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
   <ItemGroup>
